--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ src="https://www.facebook.com/tr?id=2471299313209544&ev=PageView&noscript=1"
     <h1>Welcome to YourHousingPAL</h1>
     <p>Find your perfect home by filling out this form.</p>
 
-    <form id="housingForm" action="YOUR_SHEETMONKEY_URL" method="POST">
+    <form id="housingForm" action="https://api.sheetmonkey.io/form/7p98kKVgUGBvyJ9ibVrn9e" method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="Name" required>
 
