--- a/index.html
+++ b/index.html
@@ -7,25 +7,64 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  
+<header>
+    <img src="yhp logo.png" alt="YourHousingPAL Logo" id="logo">
+</header>
+  
+<section id="welcome">
     <h1>Welcome to YourHousingPAL</h1>
-    <p>Find your perfect home by filling out this form.</p>
+    <p>Like any any good pal, you can rely on us.</p>
+  <p>Here at YourHousingPal are here to help you make the most out of your rental income</p>
+  <p> Our aim is simple: we want to help you earn more! </p>
+  </section>
+  
+  <section id="about">
+    <h2>About YourHousingPAL</h2>
+    <p>At YourHousingPAL, we specialize in helping landlords find tailored solutions to their housing challenges. Whether you're dealing with vacant properties, difficult tenants, or financial concerns, we're here to help.</p>
+    <p>Our goal is simple: to help landlords maximize their rental potential while providing reliable solutions. We understand that every property is unique, and we work closely with you to ensure you get the best possible outcome.</p>
+    <p>Located in Canterbury, we focus on properties near Canterbury City Centre and Canterbury Cathedral, ensuring landlords in these areas receive expert support.</p>
+    <p><strong>We are here to make your property work for you!</strong></p>
+</section>
 
-    <form id="housingForm" action="https://api.sheetmonkey.io/form/cT6Dcqh1K9Bmd1wUzGnLqC" method="POST">
-        <label for="name">Your Name:</label>
-        <input type="text" id="name" name="Name" required>
 
-        <label for="email">Email Address:</label>
-        <input type="email" id="email" name="Email" required>
+    <form id="housing-form">
+    <h2>Find the Best Solution for Your Property</h2>
+    
+    <label for="property-location">Is your property near Canterbury City Centre or Canterbury Cathedral?</label>
+    <select id="property-location" name="property-location" required>
+        <option value="">Select an option</option>
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+    </select>
 
-        <label for="budget">Budget Range:</label>
-        <input type="text" id="budget" name="Budget">
+    <label for="property-type">Property Type:</label>
+    <select id="property-type" name="property-type" required>
+        <option value="">Select Property Type</option>
+        <option value="Apartment">Apartment</option>
+        <option value="House">House</option>
+        <option value="Commercial Space">Commercial Space</option>
+        <option value="Other">Other</option>
+    </select>
 
-        <label for="location">Preferred Location:</label>
-        <input type="text" id="location" name="Location">
+    <label for="rental-income">Current Monthly Rental Income (if applicable):</label>
+    <input type="text" id="rental-income" name="rental-income" placeholder="e.g., £1200" required>
 
-        <button type="submit">Submit</button>
-    </form>
+    <label for="challenges">What issues are you facing with your property?</label>
+    <textarea id="challenges" name="challenges" rows="4" placeholder="Tell us your biggest challenges..." required></textarea>
+
+    <label for="contact-name">Your Name:</label>
+    <input type="text" id="contact-name" name="contact-name" required>
+
+    <label for="contact-email">Your Email:</label>
+    <input type="email" id="contact-email" name="contact-email" required>
+
+    <label for="contact-phone">Your Phone Number:</label>
+    <input type="tel" id="contact-phone" name="contact-phone" required>
+
+    <button type="submit">Submit</button>
+</form>
+
 
     <script src="script.js"></script>
 
