--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 </header>
 
 <section id="welcome">
-    <h1>Welcome to YourHousingPAL</h1>
-    <p>Like any any good pal, you can rely on us.</p>
-  <p>Here at YourHousingPal are here to help you make the most out of your rental income</p>
-  <p> Our aim is simple: we want to help you earn more! </p>
+    <h1>Welcome to YourHousingPal</h1>
+    <p>Like any any good pal, you can rely on us🤝.</p>
+  <p>Here at YourHousingPal we are here to help you make the most out of your rental income</p>
+  <p> Our aim is simple: we want to help you, the landlord, earn more! </p>
   </section>
   
   <section id="about">
     <h2>Why Choose Us?</h2>
-    <p>At YourHousingPAL, we specialise in helping landlords navigate challenges and maximise returns.</p>
+    <p>We specialise in helping landlords navigate challenges and maximise returns.</p>
     <div class="about-container">
         <div class="about-box">
             <h3>Tailored Solutions</h3>
@@ -80,6 +80,13 @@
   </section>
 
     <script src="script.js"></script>
+    
+  <footer>
+    <h2>Contact Us</h2>
+    <p>Have any questions? Let us know!</p>
+    <p>Email: <a href="mailto:info.yourhousingpal@gmail.com">info.yourhousingpal@gmail.com</a></p>
+    <p>Phone: <a href="tel:+447903675157">07903 675157</a></p>
+</footer>
 
 </body>
 </html>
