--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1>Welcome to YourHousingPal</h1>
     <p>Like any any good pal, you can rely on us🤝.</p>
   <p>Here at YourHousingPal we are here to help you make the most out of your rental income</p>
-  <p> Our aim is simple: we want to help you, the landlord, earn more! </p>
+  <p> Our aim is simple: we want to help you earn more! </p>
   </section>
   
   <section id="about">
