--- a/index.html
+++ b/index.html
@@ -81,13 +81,20 @@
 
     <script src="script.js"></script>
     
-  <footer>
+<footer>
     <h2>Contact Us</h2>
-    <p>Have any questions? Let us know!</p>
+    <p>Have questions? We're here to help!</p>
     <p>Email: <a href="mailto:info.yourhousingpal@gmail.com">info.yourhousingpal@gmail.com</a></p>
-    <p>Phone: <a href="tel:+447903675157">07903 675157</a></p>
+    <p>
+        WhatsApp:  
+        <a href="https://wa.me/447903675157" target="_blank">
+            <img src="images/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+          <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by cobynecz - Flaticon</a>
+            07903 675157
+        </a>
+    </p>
 </footer>
-
+    
 </body>
 </html>
 
