--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
     <p>
         WhatsApp:  
         <a href="https://wa.me/447903675157" target="_blank">
-            <img src="images/whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
-          <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">Whatsapp icons created by cobynecz - Flaticon</a>
+            <img src="whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
+          <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">icon from here</a>
             07903 675157
         </a>
     </p>
