--- a/index.html
+++ b/index.html
@@ -87,11 +87,7 @@
     <p>Email: <a href="mailto:info.yourhousingpal@gmail.com">info.yourhousingpal@gmail.com</a></p>
     <p>
         WhatsApp:  
-        <a href="https://wa.me/447903675157" target="_blank">
-            <img src="whatsapp-icon.png" alt="WhatsApp" class="whatsapp-icon">
-          <a href="https://www.flaticon.com/free-icons/whatsapp" title="whatsapp icons">icon from here</a>
-            07903 675157
-        </a>
+        <a href="https://wa.me/447903675157" target="_blank">07903 675157</a>
     </p>
 </footer>
     
