--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <section id="contact">
     <h2>Tell Us About Your Property</h2>
-    <form id="housing-form">
+     <form id="housingForm" action="https://api.sheetmonkey.io/form/cmq5MhQT4n4RBZWeRxHc16" method="POST">
         <label for="property-location">Is your property near Canterbury City Centre or Canterbury Cathedral?</label>
         <select id="property-location" name="property-location" required>
             <option value="">Select an option</option>
